--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -128,6 +128,6 @@ jobs:
       - name: packing website
         run: |
           chmod +x ./gradlew
-          ./gradlew webpackJsRelease
+          ./gradlew clean webpackJsRelease
         working-directory: ./samples/multiplatform-sample
 
