--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -1,4 +1,4 @@
-name: Build Konfig Samples
+name: Build Konfig & Samples
 
 on:
   pull_request:
@@ -131,3 +131,23 @@ jobs:
           ./gradlew clean webpackJsRelease
         working-directory: ./samples/multiplatform-sample
 
+  build-konfig-plugin:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Building konfig-plugin
+        run: |
+          chmod +x ./gradlew
+          ./gradlew :konfig-plugin:build
+        working-directory: .
