--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -5,8 +5,53 @@ on:
     branches: [ dev-master ]
 
 jobs:
+  build-konfig-plugin:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Make gradle executable
+        run: chmod +x ./gradlew
+        working-directory: .
+      - name: Building konfig-plugin
+        run: ./gradlew :konfig-plugin:build
+        working-directory: .
+
+  build-konfig-runtime:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Cache Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Make gradle executable
+        run: chmod +x ./gradlew
+        working-directory: .
+      - name: Building konfig-runtime
+        run: ./gradlew :konfig:build
+        working-directory: .
+
   build-sample-android:
     runs-on: ubuntu-latest
+    needs: [build-konfig-plugin,build-konfig-runtime]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -28,6 +73,7 @@ jobs:
 
   build-sample-browser:
     runs-on: ubuntu-latest
+    needs: [build-konfig-plugin,build-konfig-runtime]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -49,6 +95,7 @@ jobs:
 
   build-sample-desktop:
     runs-on: ubuntu-latest
+    needs: [build-konfig-plugin,build-konfig-runtime]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -70,6 +117,7 @@ jobs:
 
   build-sample-mpp-android:
     runs-on: ubuntu-latest
+    needs: [build-konfig-plugin,build-konfig-runtime]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -91,6 +139,7 @@ jobs:
 
   build-sample-mpp-jvm:
     runs-on: ubuntu-latest
+    needs: [build-konfig-plugin,build-konfig-runtime]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -111,6 +160,7 @@ jobs:
         working-directory: ./samples/multiplatform-sample
 
   build-sample-mpp-browser:
+    needs: [build-konfig-plugin,build-konfig-runtime]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -131,7 +181,8 @@ jobs:
           ./gradlew clean webpackJsRelease
         working-directory: ./samples/multiplatform-sample
 
-  build-konfig-plugin:
+  build-sample-mm-browser:
+    needs: [build-konfig-plugin,build-konfig-runtime]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -146,8 +197,8 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Building konfig-plugin
+      - name: packing website
         run: |
           chmod +x ./gradlew
-          ./gradlew :konfig-plugin:build
-        working-directory: .
+          ./gradlew :todo-browser:clean :todo-browser:webpackRelease
+        working-directory: ./samples/multimodule-sample
